--- a/dart-sass/sass/styles.css
+++ b/dart-sass/sass/styles.css
@@ -1,7 +1,198 @@
-@import url(libs/fonts.scss);
+@font-face {
+  font-family: "Shrikhand";
+  src: url(police/Shrikhand/Shrikhand-Regular.ttf);
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Roboto";
+  src: url(police/Roboto/Roboto-Regular.ttf);
+}
+
+@-webkit-keyframes heart {
+  0% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+  25% {
+    -webkit-transform: scale(0.25);
+            transform: scale(0.25);
+  }
+  50% {
+    -webkit-transform: scale(0.5);
+            transform: scale(0.5);
+  }
+  75% {
+    -webkit-transform: scale(0.75);
+            transform: scale(0.75);
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+@keyframes heart {
+  0% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+  25% {
+    -webkit-transform: scale(0.25);
+            transform: scale(0.25);
+  }
+  50% {
+    -webkit-transform: scale(0.5);
+            transform: scale(0.5);
+  }
+  75% {
+    -webkit-transform: scale(0.75);
+            transform: scale(0.75);
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+@-webkit-keyframes rotation {
+  0% {
+    -webkit-transform: all;
+            transform: all;
+  }
+  1% {
+    -webkit-transform: rotateZ(0deg);
+            transform: rotateZ(0deg);
+  }
+  100% {
+    -webkit-transform: rotateZ(360deg);
+            transform: rotateZ(360deg);
+  }
+}
+
+@keyframes rotation {
+  0% {
+    -webkit-transform: all;
+            transform: all;
+  }
+  1% {
+    -webkit-transform: rotateZ(0deg);
+            transform: rotateZ(0deg);
+  }
+  100% {
+    -webkit-transform: rotateZ(360deg);
+            transform: rotateZ(360deg);
+  }
+}
+
+@-webkit-keyframes slide {
+  0% {
+    opacity: 1;
+    -webkit-transform: scaleX(0);
+            transform: scaleX(0);
+  }
+  25% {
+    opacity: 1;
+    -webkit-transform: scaleX(0.25);
+            transform: scaleX(0.25);
+  }
+  50% {
+    opacity: 1;
+    -webkit-transform: scaleX(0.5);
+            transform: scaleX(0.5);
+  }
+  75% {
+    opacity: 1;
+    -webkit-transform: scaleX(0.75);
+            transform: scaleX(0.75);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: scaleX(1);
+            transform: scaleX(1);
+  }
+}
+
+@keyframes slide {
+  0% {
+    opacity: 1;
+    -webkit-transform: scaleX(0);
+            transform: scaleX(0);
+  }
+  25% {
+    opacity: 1;
+    -webkit-transform: scaleX(0.25);
+            transform: scaleX(0.25);
+  }
+  50% {
+    opacity: 1;
+    -webkit-transform: scaleX(0.5);
+            transform: scaleX(0.5);
+  }
+  75% {
+    opacity: 1;
+    -webkit-transform: scaleX(0.75);
+            transform: scaleX(0.75);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: scaleX(1);
+            transform: scaleX(1);
+  }
+}
+
+@media screen and (min-width: 992px) {
+  body {
+    width: 80%;
+  }
+  .fonctionnement {
+    width: 40%;
+  }
+  .recherche_restaurant {
+    width: 40%;
+  }
+  .box_intro {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    background-color: #fff;
+  }
+  #restaurants {
+    border-radius: 20px;
+  }
+  #restaurants .box_restaurant .card_restaurant {
+    width: 40%;
+    height: 20vw;
+    margin: 10px;
+  }
+  #restaurants .box_restaurant .card_restaurant img {
+    height: 190px;
+  }
+  #restaurants .box_restaurant .card_restaurant .nouveau {
+    top: -280px;
+    left: 280px;
+  }
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
 body {
-  width: 100%;
-  font-family: "roboto";
+  font-family: "roboto", sans-serif;
+  margin: auto;
+}
+
+body a {
+  text-decoration: none;
+  color: black;
 }
 
 header {
@@ -10,11 +201,12 @@ header {
 
 header .logo {
   text-align: center;
-  padding: 30px;
+  padding: 10px;
 }
 
 header img {
-  height: 30px;
+  width: 50%;
+  height: 7vw;
 }
 
 .header-menu {
@@ -24,11 +216,452 @@ header img {
 
 .header-menu .arrow {
   position: absolute;
-  top: 40%;
+  top: 20%;
 }
 
 .header-menu .arrow .fa-arrow-left {
   display: inline-block;
-  font-size: normal;
+  font-size: 40px;
+  font-weight: bold;
+}
+
+main {
+  display: block;
+}
+
+main .localisation {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  background-color: #e6e6e6;
+  -webkit-box-shadow: inset 0px 7px 3px -5px #3a383833;
+          box-shadow: inset 0px 7px 3px -5px #3a383833;
+}
+
+main .localisation i {
+  display: inline-block;
+  font-size: 17px;
+  margin-right: 5px;
+}
+
+main .localisation input {
+  text-align: center;
+  border: transparent;
+  background-color: #e6e6e6;
+  font-weight: bolder;
+  font-size: 17px;
+}
+
+.recherche_restaurant {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 20px 0 30px 0;
+  background-color: #f5f5f5;
+}
+
+.recherche_restaurant h1 {
+  font-size: 30px;
+  font-weight: bold;
+  text-align: center;
+  margin: 5px;
+}
+
+.recherche_restaurant p {
+  font-size: 20px;
+  font-weight: lighter;
+  text-align: center;
+  margin: 30px 10px 50px 10px;
+}
+
+.recherche_restaurant .btn {
+  font-size: 20px;
+  font-weight: 500;
+  padding: 15px;
+  border: 1px solid transparent;
+  border-radius: 50px;
+  -webkit-box-shadow: 0 0 10px #3a383833;
+          box-shadow: 0 0 10px #3a383833;
+  color: white;
+  background: -webkit-gradient(linear, right bottom, left top, from(#9356dc), to(#ff79da));
+  background: linear-gradient(to left top, #9356dc, #ff79da);
+  cursor: pointer;
+}
+
+.fonctionnement {
+  margin: 60px 0 60px 0;
+}
+
+.fonctionnement h2 {
+  text-align: left;
+  margin-left: 30px;
+  padding-bottom: 20px;
+}
+
+.btn-fonctionnement {
+  margin: 10px 0px 10px 0px;
+}
+
+.btn-fonctionnement .fonctionnement_button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 20px 5px 30px 5px;
+}
+
+.btn-fonctionnement .fonctionnement_button_number {
+  position: relative;
+  left: 12px;
+  z-index: 2;
+  padding: 5px 10px;
+  border-radius: 100px;
+  border: 1px solid #9356dc;
+  background-color: #9356dc;
+  color: white;
+  font-size: 15px;
+}
+
+.btn-fonctionnement .fonctionnement_button a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  width: 85%;
+  border: 1px solid transparent;
+  -webkit-box-shadow: 0 5px 10px #3a383833;
+          box-shadow: 0 5px 10px #3a383833;
+  border-radius: 20px;
+  padding: 5px;
+  background-color: #f5f5f5;
+  position: relative;
+  z-index: 1;
+}
+
+.btn-fonctionnement .fonctionnement_button a .fonctionnement_button_icon {
+  font-size: 24px;
+  margin-left: 20px;
+}
+
+.btn-fonctionnement .fonctionnement_button a h3 {
+  font-size: 20px;
+}
+
+.image_restaurant img {
+  width: 100%;
+  height: 440px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+#restaurants {
+  background-color: #f5f5f5;
+  margin: 20px 0 20px 0;
+  padding: 10px 0 10px 0;
+}
+
+#restaurants h2 {
+  margin-left: 30px;
+}
+
+#restaurants .box_restaurant {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.card_restaurant {
+  border-radius: 20px;
+  border: 1px solid transparent;
+  -webkit-box-shadow: 0 5px 10px #3a383833;
+          box-shadow: 0 5px 10px #3a383833;
+  width: 85%;
+  height: 60vw;
+  margin: 20px;
+}
+
+.card_restaurant:hover {
+  -webkit-box-shadow: 0 10px 15px #9356dc;
+          box-shadow: 0 10px 15px #9356dc;
+}
+
+.card_restaurant img {
+  width: 100%;
+  height: 40vw;
+  border-radius: 20px 20px 0 0;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.card_restaurant .description {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: -15px 5px 5px 5px;
+}
+
+.card_restaurant .description_titre {
+  font-size: 17px;
+}
+
+.card_restaurant .description_icone {
+  font-size: 25px;
+  position: relative;
+  top: 40px;
+}
+
+.card_restaurant .description_icone:hover .description_icone--full {
+  -webkit-transform-origin: bottom;
+          transform-origin: bottom;
+  opacity: 1;
+  background-image: -webkit-gradient(linear, left bottom, left top, from(#9356dc), to(#ff79da));
+  background-image: linear-gradient(to top, #9356dc, #ff79da);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  -webkit-animation: heart 1000ms ease-in-out;
+          animation: heart 1000ms ease-in-out;
+}
+
+.card_restaurant .description_icone:hover .description_icone--empty {
+  opacity: 0;
+}
+
+.card_restaurant .description_icone--full {
+  position: relative;
+  left: -31.2px;
+  opacity: 0;
+}
+
+.card_restaurant .description_icone--empty {
+  opacity: 1;
+}
+
+.card_restaurant .nouveau {
+  position: relative;
+  left: 220px;
+  top: -250px;
+  padding: 5px;
+  border-radius: 5px;
+  width: 70px;
+  height: 20px;
+  background-color: #99e2d0;
+  color: #32b091;
+  font-weight: bold;
+}
+
+.resto {
+  margin-top: -80px;
+  border-radius: 50px 50px 0 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 20px;
+  position: relative;
+  top: -80px;
+  background-color: #f5f5f5;
+}
+
+.resto_titre {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-family: "shrikhand";
+  font-size: 24px;
+}
+
+.resto_titre_icone {
+  position: relative;
+  left: 10px;
+  font-size: 30px;
+  cursor: pointer;
+}
+
+.resto_titre_icone:hover .resto_titre_icone--full {
+  -webkit-transform-origin: bottom;
+          transform-origin: bottom;
+  opacity: 1;
+  background-image: -webkit-gradient(linear, left bottom, left top, from(#9356dc), to(#ff79da));
+  background-image: linear-gradient(to top, #9356dc, #ff79da);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  -webkit-animation: heart 1000ms ease-in-out;
+          animation: heart 1000ms ease-in-out;
+}
+
+.resto_titre_icone:hover .resto_titre_icone--empty {
+  opacity: 0;
+}
+
+.resto_titre_icone--full {
+  position: relative;
+  bottom: 6px;
+  opacity: 0;
+}
+
+.resto_titre_icone--empty {
+  opacity: 1;
+  position: absolute;
+}
+
+.resto_menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.resto_menu h3 {
+  text-transform: uppercase;
+  border-bottom: #99e2d0 4px solid;
+  width: 40px;
+}
+
+.resto_menu .resto_menu_choix {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+  border-radius: 20px;
+  margin-bottom: 20px;
+  background-color: white;
+  cursor: pointer;
+  padding-left: 15px;
+  -webkit-box-shadow: 0 5px 10px #3a383833;
+          box-shadow: 0 5px 10px #3a383833;
+}
+
+.resto_menu .resto_menu_choix:hover {
+  -webkit-box-shadow: 0 10px 15px #9356dc;
+          box-shadow: 0 10px 15px #9356dc;
+}
+
+.resto_menu .resto_menu_choix:hover .resto_menu_choix--icone {
+  opacity: 1;
+  -webkit-transform: scaleX(1);
+          transform: scaleX(1);
+  -webkit-transform-origin: right;
+          transform-origin: right;
+  -webkit-animation: slide 200ms;
+          animation: slide 200ms;
+}
+
+.resto_menu .resto_menu_choix:hover .resto_menu_choix--prix p {
+  -webkit-margin-end: 10px;
+          margin-inline-end: 10px;
+}
+
+.resto_menu .resto_menu_choix:hover .fa-circle-check {
+  -webkit-animation: rotation 400ms ease-in-out 0s normal both;
+          animation: rotation 400ms ease-in-out 0s normal both;
+}
+
+.resto_menu .resto_menu_choix--prix {
+  font-weight: bold;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  justify-self: flex-end;
+  -ms-flex-item-align: stretch;
+      align-self: stretch;
+}
+
+.resto_menu .resto_menu_choix--prix p {
+  justify-self: flex-end;
+  -webkit-margin-end: -40px;
+          margin-inline-end: -40px;
+}
+
+.resto_menu .resto_menu_choix--icone {
+  background-color: #99e2d0;
+  border-radius: 0 20px 20px 0;
+  padding: 35px;
+  opacity: 0;
+  -webkit-transition: all;
+  transition: all;
+}
+
+.resto_menu .resto_menu_choix--icone .fa-circle-check {
+  color: white;
+  font-size: 30px;
+  -webkit-transform: rotateY(0deg);
+          transform: rotateY(0deg);
+  -webkit-transition: all;
+  transition: all;
+}
+
+.resto_menu .resto_menu_choix--nom {
+  margin: 5px 10px 5px 10px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.resto_menu .resto_menu_choix--nom h4 {
+  font-size: 17px;
+  margin-bottom: -5px;
 }
 /*# sourceMappingURL=styles.css.map */
