--- a/dart-sass/sass/styles.css
+++ b/dart-sass/sass/styles.css
@@ -228,17 +228,17 @@
   30% {
     -webkit-transform: scale(10);
             transform: scale(10);
-    opacity: 0.7;
+    opacity: 1;
   }
   50% {
     -webkit-transform: scale(50);
             transform: scale(50);
-    opacity: 0.5;
+    opacity: 0.7;
   }
   75% {
     -webkit-transform: scale(250);
             transform: scale(250);
-    opacity: 0.3;
+    opacity: 0.5;
   }
   100% {
     -webkit-transform: scale(400);
@@ -261,17 +261,17 @@
   30% {
     -webkit-transform: scale(10);
             transform: scale(10);
-    opacity: 0.7;
+    opacity: 1;
   }
   50% {
     -webkit-transform: scale(50);
             transform: scale(50);
-    opacity: 0.5;
+    opacity: 0.7;
   }
   75% {
     -webkit-transform: scale(250);
             transform: scale(250);
-    opacity: 0.3;
+    opacity: 0.5;
   }
   100% {
     -webkit-transform: scale(400);
@@ -355,8 +355,8 @@ body a {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-animation: loader 3.5s forwards;
-          animation: loader 3.5s forwards;
+  -webkit-animation: loader 3s forwards;
+          animation: loader 3s forwards;
 }
 
 .loader .oh {
@@ -380,8 +380,8 @@ body a {
   color: #99e2d0;
   -webkit-animation: ohmyfood 0.7s ease-in-out both;
           animation: ohmyfood 0.7s ease-in-out both;
-  -webkit-animation-delay: 1.7s;
-          animation-delay: 1.7s;
+  -webkit-animation-delay: 1.5s;
+          animation-delay: 1.5s;
 }
 
 .loader .point {
@@ -390,14 +390,16 @@ body a {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   opacity: 0;
-  -webkit-animation: expand 1.4s ease-in-out both;
-          animation: expand 1.4s ease-in-out both;
-  -webkit-animation-delay: 2s;
-          animation-delay: 2s;
+  -webkit-animation: expand 1.2s ease-in-out both;
+          animation: expand 1.2s ease-in-out both;
+  -webkit-animation-delay: 2.2s;
+          animation-delay: 2.2s;
 }
 
 header {
   display: block;
+  -webkit-animation: ohmyfood 1s ease-in-out 3s both;
+          animation: ohmyfood 1s ease-in-out 3s both;
 }
 
 header #logo {
@@ -428,6 +430,8 @@ header img {
 
 main {
   display: block;
+  -webkit-animation: ohmyfood 1s ease-in-out 3s both;
+          animation: ohmyfood 1s ease-in-out 3s both;
 }
 
 main .localisation {
@@ -718,8 +722,8 @@ main .localisation input {
           transform-origin: bottom;
   -webkit-transform: translateY(0px);
           transform: translateY(0px);
-  -webkit-animation: up 1s ease-out;
-          animation: up 1s ease-out;
+  -webkit-animation: up 2s ease-out 2s;
+          animation: up 2s ease-out 2s;
 }
 
 .resto_titre_nom {
@@ -775,8 +779,8 @@ main .localisation input {
           transform-origin: bottom;
   -webkit-transform: translateY(0px);
           transform: translateY(0px);
-  -webkit-animation: up 2s ease-in-out;
-          animation: up 2s ease-in-out;
+  -webkit-animation: up 2s ease-in-out 2s;
+          animation: up 2s ease-in-out 2s;
 }
 
 .resto_menu h3 {
@@ -792,14 +796,11 @@ main .localisation input {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  -webkit-box-align: stretch;
-      -ms-flex-align: stretch;
-          align-items: stretch;
   border-radius: 20px;
   margin-bottom: 20px;
   background-color: white;
   cursor: pointer;
-  padding-left: 15px;
+  overflow: hidden;
   -webkit-box-shadow: 0 5px 10px #3a383833;
           box-shadow: 0 5px 10px #3a383833;
 }
@@ -809,19 +810,10 @@ main .localisation input {
           box-shadow: 0 10px 15px #9356dc;
 }
 
-.resto_menu .resto_menu_choix:hover .resto_menu_choix--icone {
-  opacity: 1;
-  -webkit-transform: scaleX(1);
-          transform: scaleX(1);
-  -webkit-transform-origin: right;
-          transform-origin: right;
-  -webkit-animation: slide 200ms ease-in-out both;
-          animation: slide 200ms ease-in-out both;
-}
-
-.resto_menu .resto_menu_choix:hover .resto_menu_choix--prix p {
-  -webkit-margin-end: 10px;
-          margin-inline-end: 10px;
+.resto_menu .resto_menu_choix:hover .resto_menu_choix--prix {
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+  /*animation: slide 200ms ease-in-out both;*/
 }
 
 .resto_menu .resto_menu_choix:hover .fa-circle-check {
@@ -830,37 +822,39 @@ main .localisation input {
 }
 
 .resto_menu .resto_menu_choix--prix {
-  font-weight: bold;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  /*justify-content: center;
+      align-items: center;
+      justify-self: flex-end;
+      align-self: stretch;*/
+  -webkit-transform: translateX(100px);
+          transform: translateX(100px);
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+}
+
+.resto_menu .resto_menu_choix--prix p {
+  font-weight: bold;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  margin-right: 20px;
+}
+
+.resto_menu .resto_menu_choix--prix .resto_menu_choix--icone {
+  background-color: #99e2d0;
+  border-radius: 0 20px 20px 0;
+  padding: 35px;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  justify-self: flex-end;
-  -ms-flex-item-align: stretch;
-      align-self: stretch;
 }
 
-.resto_menu .resto_menu_choix--prix p {
-  justify-self: flex-end;
-  -webkit-margin-end: -40px;
-          margin-inline-end: -40px;
-}
-
-.resto_menu .resto_menu_choix--icone {
-  background-color: #99e2d0;
-  border-radius: 0 20px 20px 0;
-  padding: 35px;
-  opacity: 0;
-  -webkit-transition: all;
-  transition: all;
-}
-
-.resto_menu .resto_menu_choix--icone .fa-circle-check {
+.resto_menu .resto_menu_choix--prix .resto_menu_choix--icone .fa-circle-check {
   color: white;
   font-size: 30px;
   -webkit-transform: rotateY(0deg);
@@ -870,15 +864,22 @@ main .localisation input {
 }
 
 .resto_menu .resto_menu_choix--nom {
-  margin: 5px 10px 5px 10px;
   overflow: hidden;
   white-space: nowrap;
-  text-overflow: ellipsis;
 }
 
 .resto_menu .resto_menu_choix--nom h4 {
   font-size: 17px;
   margin-bottom: -5px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
+.resto_menu .resto_menu_choix--nom p {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 footer {
@@ -912,236 +913,4 @@ footer .box_footer ul li a {
 footer .box_footer ul li a i {
   margin-right: 10px;
 }
-
-/*main {
-  display: block;
-  .localisation {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    background-color: #e6e6e6;
-    box-shadow: inset 0px 7px 3px -5px #3a383833;
-    i {
-      display: inline-block;
-      font-size: 17px;
-      margin-right: 5px;
-    }
-    input {
-      text-align: center;
-      border: transparent;
-      background-color: #e6e6e6;
-      font-weight: bolder;
-      font-size: 17px;
-    }
-  }
-}
-.recherche_restaurant {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 20px 0 30px 0;
-  background-color: $color-bg;
-  h1 {
-    font-size: 30px;
-    font-weight: bold;
-    text-align: center;
-    margin: 5px;
-  }
-  p {
-    font-size: 20px;
-    font-weight: lighter;
-    text-align: center;
-    margin: 30px 10px 50px 10px;
-  }
-  .btn {
-    font-size: 20px;
-    font-weight: 500;
-    padding: 15px;
-    border: 1px solid transparent;
-    border-radius: 50px;
-    box-shadow: 0 0 10px #3a383833;
-    color: white;
-    background: linear-gradient(to left top, $color-primary, $color-secondary);
-  }
-}
-
-.fonctionnement {
-  margin: 60px 0 60px 0;
-  h2 {
-    text-align: left;
-    margin-left: 30px;
-    padding-bottom: 20px;
-  }
-}
-
-.btn-fonctionnement {
-  margin: 10px 0px 10px 0px;
-  .fonctionnement_button {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 20px 5px 30px 5px;
-    &_number {
-      position: relative;
-      left: 12px;
-      z-index: 2;
-      padding: 5px 10px;
-      border-radius: 100px;
-      border: 1px solid $color-primary;
-      background-color: $color-primary;
-      color: white;
-      font-size: 15px;
-    }
-    a {
-      display: flex;
-      align-items: center;
-      justify-content: space-around;
-      width: 85%;
-      border: 1px solid transparent;
-      @include shadow;
-      border-radius: 20px;
-      padding: 5px;
-      background-color: $color-bg;
-      position: relative;
-      z-index: 1;
-      .fonctionnement_button_icon {
-        font-size: 24px;
-        margin-left: 20px;
-      }
-      h3 {
-        font-size: 20px;
-      }
-    }
-  }
-}
-.image_restaurant {
-  img {
-    width: 100%;
-    height: 350px;
-    object-fit: fill;
-  }
-}
-
-.restaurants {
-  background-color: $color-bg;
-  margin: 20px 0 20px 0;
-  padding: 10px 0 10px 0;
-  h2 {
-    margin-left: 30px;
-  }
-  .box_restaurant {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-around;
-  }
-}
-
-.card_restaurant {
-  border-radius: 20px;
-  border: 1px solid transparent;
-  @include shadow;
-  width: 85%;
-  height: 60vw;
-  margin: 20px;
-  &:hover {
-    @include shadow-darker;
-  }
-  img {
-    width: 100%;
-    height: 40vw;
-    border-radius: 20px 20px 0 0;
-    object-fit: cover;
-  }
-  .description {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin: -15px 5px 5px 5px;
-    &_titre {
-      font-size: 17px;
-    }
-    &_icone {
-      font-size: 25px;
-      position: relative;
-      top: 40px;
-      &--full {
-        position: relative;
-        left: -31.2px;
-        opacity: 0;
-        &:hover {
-          @include animation;
-        }
-      }
-      &--empty {
-        opacity: 1;
-      }
-    }
-  }
-  .nouveau {
-    position: relative;
-    left: 220px;
-    top: -250px;
-    padding: 5px;
-    border-radius: 5px;
-    width: 70px;
-    height: 20px;
-    background-color: $color-tertiary;
-    color: darken($color: $color-tertiary, $amount: 30);
-    font-weight: bold;
-  }
-}
-.resto {
-  margin-top: -80px;
-  border-radius: 50px 50px 0 0;
-  box-sizing: border-box;
-  padding: 20px;
-  position: relative;
-  top: -80px;
-  background-color: $color-bg;
-  &_titre {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    font-size: 5vw;
-    font-family: "shrikhand";
-    &_icone {
-      position: relative;
-      left: 30px;
-      cursor: pointer;
-      &--full {
-        position: relative;
-        bottom: 9px;
-        opacity: 0;
-        z-index: 1;
-        &:hover {
-          @include animation;
-        }
-      }
-      &--empty {
-        position: absolute;
-        z-index: 2;
-      }
-    }
-  }
-}
-.resto_menu_titre {
-  display: flex;
-  flex-direction: column;
-  h4 {
-    font-size: 23px;
-    font-weight: 500;
-    text-transform: uppercase;
-    border-bottom: $color-tertiary 4px solid;
-    width: 40px;
-  }
-  .resto_menu_choix {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-  }
-}*/
 /*# sourceMappingURL=styles.css.map */
