--- a/dart-sass/sass/styles.scss
+++ b/dart-sass/sass/styles.scss
@@ -67,7 +67,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  animation: loader 3.5s forwards;
+  animation: loader 3s forwards;
   .oh {
     color: $color-primary;
     opacity: 0;
@@ -82,20 +82,21 @@ body {
   .food {
     color: $color-tertiary;
     animation: ohmyfood 0.7s ease-in-out both;
-    animation-delay: 1.7s;
+    animation-delay: 1.5s;
   }
   .point {
     background-image: linear-gradient(to top, $color-primary, $color-secondary);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     opacity: 0;
-    animation: expand 1.4s ease-in-out both;
-    animation-delay: 2s;
+    animation: expand 1.2s ease-in-out both;
+    animation-delay: 2.2s;
   }
 }
 
 header {
   display: block;
+  animation: ohmyfood 1s ease-in-out 3s both;
   #logo {
     text-align: center;
     padding: 10px;
@@ -121,6 +122,7 @@ header {
 
 main {
   display: block;
+  animation: ohmyfood 1s ease-in-out 3s both;
   .localisation {
     display: flex;
     justify-content: center;
@@ -321,7 +323,7 @@ main {
     align-items: center;
     transform-origin: bottom;
     transform: translateY(0px);
-    animation: up 1s ease-out;
+    animation: up 2s ease-out 2s;
     &_nom {
       font-size: 30px;
       font-family: "shrikhand";
@@ -357,7 +359,7 @@ main {
   flex-direction: column;
   transform-origin: bottom;
   transform: translateY(0px);
-  animation: up 2s ease-in-out;
+  animation: up 2s ease-in-out 2s;
   h3 {
     text-transform: uppercase;
     border-bottom: $color-tertiary 4px solid;
@@ -367,66 +369,66 @@ main {
   .resto_menu_choix {
     display: flex;
     justify-content: space-between;
-    align-items: stretch;
     border-radius: 20px;
     margin-bottom: 20px;
     background-color: white;
     cursor: pointer;
-    padding-left: 15px;
-
+    overflow: hidden;
     @include shadow;
     &:hover {
       @include shadow-darker;
     }
     &:hover {
-      & .resto_menu_choix--icone {
-        opacity: 1;
-        transform: scaleX(1);
-        transform-origin: right;
-        animation: slide 200ms ease-in-out both;
-      }
       & .resto_menu_choix--prix {
-        p {
-          margin-inline-end: 10px;
-        }
+        transform: translateX(0);
+        /*animation: slide 200ms ease-in-out both;*/
       }
       & .fa-circle-check {
         animation: rotation 400ms ease-in-out 0s normal both;
       }
     }
     &--prix {
-      font-weight: bold;
       display: flex;
-      justify-content: center;
+      /*justify-content: center;
       align-items: center;
       justify-self: flex-end;
-      align-self: stretch;
+      align-self: stretch;*/
+      transform: translateX(100px);
+      transition: all 0.4s ease-in-out;
       p {
-        justify-self: flex-end;
-        margin-inline-end: -40px;
+        font-weight: bold;
+        align-self: flex-end;
+        margin-right: 20px;
       }
-    }
-    &--icone {
-      background-color: $color-tertiary;
-      border-radius: 0 20px 20px 0;
-      padding: 35px;
-      opacity: 0;
-      transition: all;
-      .fa-circle-check {
-        color: white;
-        font-size: 30px;
-        transform: rotateY(0deg);
-        transition: all;
+      .resto_menu_choix--icone {
+        background-color: $color-tertiary;
+        border-radius: 0 20px 20px 0;
+        padding: 35px;
+        justify-content: center;
+        align-items: center;
+
+        .fa-circle-check {
+          color: white;
+          font-size: 30px;
+          transform: rotateY(0deg);
+          transition: all;
+        }
       }
     }
     &--nom {
-      margin: 5px 10px 5px 10px;
       overflow: hidden;
       white-space: nowrap;
-      text-overflow: ellipsis;
       h4 {
         font-size: 17px;
         margin-bottom: -5px;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+      }
+      p {
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
       }
     }
   }
@@ -459,235 +461,3 @@ footer {
     }
   }
 }
-
-/*main {
-  display: block;
-  .localisation {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    background-color: #e6e6e6;
-    box-shadow: inset 0px 7px 3px -5px #3a383833;
-    i {
-      display: inline-block;
-      font-size: 17px;
-      margin-right: 5px;
-    }
-    input {
-      text-align: center;
-      border: transparent;
-      background-color: #e6e6e6;
-      font-weight: bolder;
-      font-size: 17px;
-    }
-  }
-}
-.recherche_restaurant {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 20px 0 30px 0;
-  background-color: $color-bg;
-  h1 {
-    font-size: 30px;
-    font-weight: bold;
-    text-align: center;
-    margin: 5px;
-  }
-  p {
-    font-size: 20px;
-    font-weight: lighter;
-    text-align: center;
-    margin: 30px 10px 50px 10px;
-  }
-  .btn {
-    font-size: 20px;
-    font-weight: 500;
-    padding: 15px;
-    border: 1px solid transparent;
-    border-radius: 50px;
-    box-shadow: 0 0 10px #3a383833;
-    color: white;
-    background: linear-gradient(to left top, $color-primary, $color-secondary);
-  }
-}
-
-.fonctionnement {
-  margin: 60px 0 60px 0;
-  h2 {
-    text-align: left;
-    margin-left: 30px;
-    padding-bottom: 20px;
-  }
-}
-
-.btn-fonctionnement {
-  margin: 10px 0px 10px 0px;
-  .fonctionnement_button {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 20px 5px 30px 5px;
-    &_number {
-      position: relative;
-      left: 12px;
-      z-index: 2;
-      padding: 5px 10px;
-      border-radius: 100px;
-      border: 1px solid $color-primary;
-      background-color: $color-primary;
-      color: white;
-      font-size: 15px;
-    }
-    a {
-      display: flex;
-      align-items: center;
-      justify-content: space-around;
-      width: 85%;
-      border: 1px solid transparent;
-      @include shadow;
-      border-radius: 20px;
-      padding: 5px;
-      background-color: $color-bg;
-      position: relative;
-      z-index: 1;
-      .fonctionnement_button_icon {
-        font-size: 24px;
-        margin-left: 20px;
-      }
-      h3 {
-        font-size: 20px;
-      }
-    }
-  }
-}
-.image_restaurant {
-  img {
-    width: 100%;
-    height: 350px;
-    object-fit: fill;
-  }
-}
-
-.restaurants {
-  background-color: $color-bg;
-  margin: 20px 0 20px 0;
-  padding: 10px 0 10px 0;
-  h2 {
-    margin-left: 30px;
-  }
-  .box_restaurant {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-around;
-  }
-}
-
-.card_restaurant {
-  border-radius: 20px;
-  border: 1px solid transparent;
-  @include shadow;
-  width: 85%;
-  height: 60vw;
-  margin: 20px;
-  &:hover {
-    @include shadow-darker;
-  }
-  img {
-    width: 100%;
-    height: 40vw;
-    border-radius: 20px 20px 0 0;
-    object-fit: cover;
-  }
-  .description {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin: -15px 5px 5px 5px;
-    &_titre {
-      font-size: 17px;
-    }
-    &_icone {
-      font-size: 25px;
-      position: relative;
-      top: 40px;
-      &--full {
-        position: relative;
-        left: -31.2px;
-        opacity: 0;
-        &:hover {
-          @include animation;
-        }
-      }
-      &--empty {
-        opacity: 1;
-      }
-    }
-  }
-  .nouveau {
-    position: relative;
-    left: 220px;
-    top: -250px;
-    padding: 5px;
-    border-radius: 5px;
-    width: 70px;
-    height: 20px;
-    background-color: $color-tertiary;
-    color: darken($color: $color-tertiary, $amount: 30);
-    font-weight: bold;
-  }
-}
-.resto {
-  margin-top: -80px;
-  border-radius: 50px 50px 0 0;
-  box-sizing: border-box;
-  padding: 20px;
-  position: relative;
-  top: -80px;
-  background-color: $color-bg;
-  &_titre {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    font-size: 5vw;
-    font-family: "shrikhand";
-    &_icone {
-      position: relative;
-      left: 30px;
-      cursor: pointer;
-      &--full {
-        position: relative;
-        bottom: 9px;
-        opacity: 0;
-        z-index: 1;
-        &:hover {
-          @include animation;
-        }
-      }
-      &--empty {
-        position: absolute;
-        z-index: 2;
-      }
-    }
-  }
-}
-.resto_menu_titre {
-  display: flex;
-  flex-direction: column;
-  h4 {
-    font-size: 23px;
-    font-weight: 500;
-    text-transform: uppercase;
-    border-bottom: $color-tertiary 4px solid;
-    width: 40px;
-  }
-  .resto_menu_choix {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-  }
-}*/
