--- a/dart-sass/sass/styles.css
+++ b/dart-sass/sass/styles.css
@@ -340,7 +340,7 @@ body a {
 .loader {
   position: fixed;
   z-index: 10;
-  font-family: "shrikhand", sans-serif;
+  font-family: "Shrikhand", sans-serif;
   font-size: 40px;
   background: white;
   width: 100%;
@@ -355,8 +355,8 @@ body a {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-animation: loader 3s forwards;
-          animation: loader 3s forwards;
+  -webkit-animation: loader 3s both;
+          animation: loader 3s both;
 }
 
 .loader .oh {
@@ -494,7 +494,7 @@ main .localisation input {
   margin: 30px 10px 50px 10px;
 }
 
-.recherche_restaurant .btn {
+.btn {
   font-size: 20px;
   font-weight: 500;
   padding: 15px;
@@ -821,6 +821,25 @@ main .localisation input {
           animation: rotation 400ms ease-in-out 0s normal both;
 }
 
+.resto_menu .resto_menu_choix:hover .resto_menu_choix--nom {
+  overflow: hidden;
+  margin-right: 0;
+}
+
+.resto_menu .resto_menu_choix:hover .resto_menu_choix--nom h4 {
+  /*font-size: 17px;
+          margin-bottom: -5px;*/
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
+.resto_menu .resto_menu_choix:hover .resto_menu_choix--nom p {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
 .resto_menu .resto_menu_choix--prix {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -864,6 +883,8 @@ main .localisation input {
 }
 
 .resto_menu .resto_menu_choix--nom {
+  margin-left: 10px;
+  margin-right: -100px;
   overflow: hidden;
   white-space: nowrap;
 }
@@ -880,6 +901,24 @@ main .localisation input {
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
+}
+
+.commander {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.commander .btn {
+  margin-bottom: 80px;
+  margin-top: -50px;
+  padding: 15px 50px 15px 50px;
 }
 
 footer {
