--- a/dart-sass/sass/styles.scss
+++ b/dart-sass/sass/styles.scss
@@ -58,7 +58,7 @@ body {
 .loader {
   position: fixed;
   z-index: 10;
-  font-family: "shrikhand", sans-serif;
+  font-family: "Shrikhand", sans-serif;
   font-size: 40px;
   background: white;
   width: 100%;
@@ -67,7 +67,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  animation: loader 3s forwards;
+  animation: loader 3s both;
   .oh {
     color: $color-primary;
     opacity: 0;
@@ -163,17 +163,17 @@ main {
     text-align: center;
     margin: 30px 10px 50px 10px;
   }
-  .btn {
-    font-size: 20px;
-    font-weight: 500;
-    padding: 15px;
-    border: 1px solid transparent;
-    border-radius: 50px;
-    box-shadow: 0 0 10px #3a383833;
-    color: white;
-    background: linear-gradient(to left top, $color-primary, $color-secondary);
-    cursor: pointer;
-  }
+}
+.btn {
+  font-size: 20px;
+  font-weight: 500;
+  padding: 15px;
+  border: 1px solid transparent;
+  border-radius: 50px;
+  box-shadow: 0 0 10px #3a383833;
+  color: white;
+  background: linear-gradient(to left top, $color-primary, $color-secondary);
+  cursor: pointer;
 }
 
 .fonctionnement {
@@ -386,6 +386,22 @@ main {
       & .fa-circle-check {
         animation: rotation 400ms ease-in-out 0s normal both;
       }
+      & .resto_menu_choix--nom {
+        overflow: hidden;
+        margin-right: 0;
+        h4 {
+          /*font-size: 17px;
+          margin-bottom: -5px;*/
+          white-space: nowrap;
+          text-overflow: ellipsis;
+          overflow: hidden;
+        }
+        p {
+          white-space: nowrap;
+          text-overflow: ellipsis;
+          overflow: hidden;
+        }
+      }
     }
     &--prix {
       display: flex;
@@ -416,6 +432,8 @@ main {
       }
     }
     &--nom {
+      margin-left: 10px;
+      margin-right: -100px;
       overflow: hidden;
       white-space: nowrap;
       h4 {
@@ -431,6 +449,17 @@ main {
         overflow: hidden;
       }
     }
+  }
+}
+
+.commander {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  .btn {
+    margin-bottom: 80px;
+    margin-top: -50px;
+    padding: 15px 50px 15px 50px;
   }
 }
 footer {
